# tray-icon

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.spdx  README.md  flake.nix  renovate.json
.changes/: accidental-sync-send.md  add_mainthread_error.md  blurry-after-dpi-change-windows.md  builder-id.md  config.json  core-foundation-crates-macos.md  crash.md  deps.md  dirs.md  docs(changelog): changelog patch) for resource name  docs.md  double-click-remove-button-state.md  double-click.md  enter-event.md  event-id.md  event_handler.md  fix-button-highlight.md  fix-mac-mouse-position.md  fix-macos-set-menu.md  fix-macos-tray-item-y-pos.md  fix-set-menu.md  gtk018.md  highlight-on-click.md  i32-windows.md  i686.md  icon-resource-name.md  icon.md  icon_from_handle.md  impls.md  initial-release.md  linux-libxdo-feature-flag.md  linux-set-visible.md  linux-tray-menu.md  macos-rect-size.md  macos-set-visible-false-remove.md  macos-template.md  menu-id.md  muda-0-15.md  muda-0.11.md  muda-0.12.md  (+29 more)
.github/workflows/: clippy-fmt.yml  covector-status.yml  covector-version-or-publish.yml  test.yml
examples/: egui.rs  tao.rs  winit.rs
src/: counter.rs  error.rs  icon.rs  lib.rs  tray_icon_id.rs
src/platform_impl/gtk/: icon.rs  mod.rs
src/platform_impl/macos/: icon.rs  mod.rs
src/platform_impl/windows/: icon.rs  mod.rs  util.rs
