[package]
name = "tray-icon"
version = "0.5.1"
edition = "2021"
description = "Create tray icons for desktop applications"
homepage = "https://github.com/tauri-apps/tray-icon"
repository = "https://github.com/tauri-apps/tray-icon"
license = "MIT OR Apache-2.0"
categories = [ "gui" ]

[dependencies]
muda = "0.5"
crossbeam-channel = "0.5"
once_cell = "1"
thiserror = "1.0"

[target."cfg(target_os = \"windows\")".dependencies.windows-sys]
version = "0.48"
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_SystemServices",
  "Win32_Graphics_Gdi",
  "Win32_UI_Shell"
]

[target."cfg(target_os = \"linux\")".dependencies]
libappindicator = "0.8"
dirs-next = "2.0"

[target."cfg(target_os = \"linux\")".dev-dependencies]
gtk = "0.16"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"
objc = "0.2"
core-graphics = "0.22.3"

[target."cfg(any(target_os = \"linux\", target_os = \"macos\"))".dependencies]
png = "0.17"

[dev-dependencies]
winit = "0.28"
tao = { git = "https://github.com/tauri-apps/tao", branch = "muda" }
image = "0.24"
eframe = "0.22"
